# PPT_API

./: .env  .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  slide_contents.json
api/: package-lock.json  package.json
api/models/: image_asset.py  slides.py
api/prompts/: HTML-prompt.md  HTML-prompt2.md  system_outline_prompt.txt  test_layout.json  test_outline.txt  test_pptxmodel.py  test_slides.py
api/service/: Layouts.py  generate_html.py  generate_presentation_outline.py  generate_presentation_structure.py  generate_slide_content.py  html_to_text_runs_service.py  icon_finder_service.py  image_generation_service.py  pptx_presentation_creator.py  standardize_outline_service.py  temp_file_service.py  web_search_service.py
api/utils/: asset_directory_utils.py  dict_utils.py  download_helpers.py  export_utils.py  image_utils.py  process_slides.py  schema.py
chroma/8854703d-5ca5-4e9b-a482-4ea00b7f1c42/: index_metadata.pickle
data/: 养鱼知识科普.html  月相变化对农业生产的影响.html
models/: presentation_layout.py  presentation_model.py
my-app/: package-lock.json  package.json
my-presentation-app/: package-lock.json  package.json
my-presentation-app/script/: Layout.js  generate_pptx_model.js
presentation-templates/general/: settings.json
presentation-templates/mytemplaste/: setting.json
prompts/: system_outline_prompt.txt  system_structure_prompt.txt  test_outline.txt
service/: Layouts.py  generate_presentation_outline.py  generate_presentation_structure.py  standardize_outline_service.py  web_search_service.py
(+9 files in other folders)
